--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
   <groupId>RainbowNLP</groupId>
   <artifactId>RainbowNLP</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <properties>
+		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
+	  	<maven.compiler.source>1.7</maven.compiler.source>
+  		<maven.compiler.target>1.7</maven.compiler.target>
+  </properties>
+	
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
@@ -88,6 +95,29 @@
 	<version>1.7.9</version>
 </dependency>
 
+		<!-- Core utilities used by other modules. Define this if you use Spring 
+			Utility APIs (org.springframework.core.*/org.springframework.util.*) -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
+		<!-- Expression Language (depends on spring-core) Define this if you use 
+			Spring Expression APIs (org.springframework.expression.*) -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-expression</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
+		<!-- Bean Factory and JavaBeans utilities (depends on spring-core) Define 
+			this if you use Spring Bean APIs (org.springframework.beans.*) -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
 
 
 </dependencies>
