--- a/src/main/resources/configuration.conf
+++ b/src/main/resources/configuration.conf
@@ -1,26 +1,18 @@
-TempFolder =c:\\tmp\\
-ModelFolder =c:\\tmp\\model
+TempFolder =/tmp/
 ReleaseMode = false
-ProjectRoot=/home/ehsan/rnlp
-InputTestFolderOnTrain =/home/ehsan/Documents/i2b22012/train/2012-07-06.release-fix
-InputTestFolderOnTest =/home/ehsan/Documents/i2b22012/test/2012-08-06.test-data-release/xml 
-TestOutput =/home/ehsan/Documents/i2b22012/output
 
 MSR_API_PERL_PATH = MSRInteface.pl
 SVMMinConfidence =0.0
 	
 ClassificationMethod =SMO
 
-
-LuceneIndexFile=c:\\tmp\\lucene_index\\
-GeneRifLuceneIndexFile=c:\\tmp\\lucene_generif_index\\
-
-SVMLightLearnerPath =c:/Users/ehsan/Downloads/svm_light/svm_learn
-SVMLightClassifierPath =c:/Users/ehsan/Downloads/svm_light/svm_classify
+LuceneIndexFile = /tmp/lucene_index
 
 SVMMulticlassLearnerPath =/home/ehsan/Downloads/svm_multiclass/svm_multiclass_learn
 SVMMulticlassClassifierPath =/home/ehsan/Downloads/svm_multiclass/svm_multiclass_classify
 
+SVMLightLearnerPath =/home/ehsan/Downloads/svm_multiclass/svm_light/svm_learn
+SVMLightClassifierPath =/home/ehsan/Downloads/svm_multiclass/svm_light/svm_classify
 
 MaxCombinedInstanceWindowSize =3
 
@@ -33,14 +25,14 @@ MaxTermLength = 5
 # SVM parameters
 SVMPolyCParameter = 1
 SVMCostParameter = 1
-SVMMultiC = 1
+SVMMultiC = 20000
 
 # Possible values:
 # Linear => 0: linear (default)
 # Polynomial => 1: polynomial (s a*b+c)^d
 # Radial => 2: radial basis function exp(-gamma ||a-b||^2)
 # SigmoidTanh => 3: sigmoid tanh(s a*b + c)
-SVMKernel=1
+SVMKernel=2
 	
 # Tree options
 MinInstancePerLeaf = 10
