--- a/pom.xml
+++ b/pom.xml
@@ -1,104 +1,152 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>RainbowNLP</groupId>
-  <artifactId>RainbowNLP</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  	<parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.github.rainbownlp</groupId>
+	<artifactId>RainbowNLP</artifactId>
+	<version>0.0.1</version>
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.1.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-  <properties>
+	<properties>
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
-	  	<maven.compiler.source>1.7</maven.compiler.source>
-  		<maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
-	
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <resources>
-      <resource>
-        <directory>src</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>resources</directory>
-        <excludes>
-          <exclude>**/*.java</exclude>
-        </excludes>
-      </resource>
-    </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-         <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-   <dependencies>
-    <dependency>
-	<groupId>org.hibernate</groupId>
-	<artifactId>hibernate-core</artifactId>
-	<version>4.3.5.Final</version>
-</dependency>
-<dependency>
-	<groupId>mysql</groupId>
-	<artifactId>mysql-connector-java</artifactId>
-	<version>5.1.30</version>
-</dependency>
-<dependency>
-	<groupId>org.jgrapht</groupId>
-	<artifactId>jgrapht-jdk1.5</artifactId>
-	<version>0.7.3</version>
-</dependency>
-<dependency>
-	<groupId>nz.ac.waikato.cms.weka</groupId>
-	<artifactId>weka-stable</artifactId>
-	<version>3.6.11</version>
-</dependency>
-<dependency>
-	<groupId>org.apache.stanbol</groupId>
-	<artifactId>org.apache.stanbol.commons.opennlp</artifactId>
-	<version>0.12.0</version>
-</dependency>
-<dependency>
-	<groupId>org.apache.opennlp</groupId>
-	<artifactId>opennlp-uima</artifactId>
-	<version>1.5.3</version>
-</dependency>
-<dependency>
-	<groupId>edu.stanford.nlp</groupId>
-	<artifactId>stanford-corenlp</artifactId>
-	<version>3.3.1</version>
-</dependency>
-<dependency>
-	<groupId>cc.mallet</groupId>
-	<artifactId>mallet</artifactId>
-	<version>2.0.7</version>
-</dependency>
-<dependency>
-	<groupId>edu.washington.cs.knowitall.nlptools</groupId>
-	<artifactId>nlptools-tokenize-stanford_2.10</artifactId>
-	<version>2.4.4</version>
-</dependency>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+	</properties>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>src</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>resources</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.3</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<configuration><sourcepath>src/main/java</sourcepath></configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.5.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.30</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-jdk1.5</artifactId>
+			<version>0.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-stable</artifactId>
+			<version>3.6.11</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.stanbol</groupId>
+			<artifactId>org.apache.stanbol.commons.opennlp</artifactId>
+			<version>0.12.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.opennlp</groupId>
+			<artifactId>opennlp-uima</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>cc.mallet</groupId>
+			<artifactId>mallet</artifactId>
+			<version>2.0.7</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.washington.cs.knowitall.nlptools</groupId>
+			<artifactId>nlptools-tokenize-stanford_2.10</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 
-<dependency>
-	<groupId>org.apache.commons</groupId>
-	<artifactId>commons-math</artifactId>
-	<version>2.0</version>
-</dependency>
-<dependency>
-	<groupId>com.amazonaws</groupId>
-	<artifactId>aws-java-sdk</artifactId>
-	<version>1.7.9</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.7.9</version>
+		</dependency>
 
 		<!-- Core utilities used by other modules. Define this if you use Spring 
 			Utility APIs (org.springframework.core.*/org.springframework.util.*) -->
@@ -107,22 +155,23 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
-<!-- 		Expression Language (depends on spring-core) Define this if you use  -->
-<!-- 			Spring Expression APIs (org.springframework.expression.*) -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework</groupId> -->
-<!-- 			<artifactId>spring-expression</artifactId> -->
-<!-- 			<version>${org.springframework.version}</version> -->
-<!-- 		</dependency> -->
+		
+		<!-- Expression Language (depends on spring-core) Define this if you use -->
+		<!-- Spring Expression APIs (org.springframework.expression.*) -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-expression</artifactId> -->
+		<!-- <version>${org.springframework.version}</version> -->
+		<!-- </dependency> -->
 
-<!-- 		 Bean Factory and JavaBeans utilities (depends on spring-core) Define  -->
-<!-- 			this if you use Spring Bean APIs (org.springframework.beans.*)  -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework</groupId> -->
-<!-- 			<artifactId>spring-beans</artifactId> -->
-<!-- 			<version>${org.springframework.version}</version> -->
-<!-- 		</dependency> -->
+		<!-- Bean Factory and JavaBeans utilities (depends on spring-core) Define -->
+		<!-- this if you use Spring Bean APIs (org.springframework.beans.*) -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-beans</artifactId> -->
+		<!-- <version>${org.springframework.version}</version> -->
+		<!-- </dependency> -->
 
 
-</dependencies>
+	</dependencies>
 </project>
